[package]
name = "dynulo_persistence"
version = "0.1.0"
authors = ["Dynulo"]
edition = "2018"

[lib]
name = "dynulo_persistence"
crate-type = ["cdylib"]

[dependencies]
arma-rs = { git = "https://github.com/synixebrett/arma-rs", branch = "expirement" }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
log = "0.4"
uuid = { version = "0.8", features = ["v4"] }
